# metrics-test

./: README.md  app.py  conda-lock.yml  environment.yml  pyproject.toml
conf/base/: catalog.yml  logging.yml
docs/source/: conf.py  index.rst
notebooks/: test.ipynb
src/metrics_test/: __init__.py  __main__.py  settings.py
src/metrics_test/pipelines/data_science/: nodes.py  pipeline.py
src/tests/: test_run.py
