[tool.kedro]
package_name = "metrics_test"
project_name = "Metrics Test"
kedro_init_version = "0.18.8"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/metrics_test -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "metrics-test"
version = "0.1.0"
description = "A test of the Metrics dataset."
authors = ["Jordan Barlow <jk.barlow@icloud.com>"]
readme = "README.md"
packages = [{include = "metrics_test", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kedro-datasets = {version = "^1.2.0", extras = ["tracking"]}
kedro = "^0.18.8"


[tool.poetry.group.dev.dependencies]
kedro-viz = "^6.1.0"
jupyter = "^1.0.0"
black = "^23.3.0"
conda-lock = "^1.4.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
